create hard link instead of copy of libft header

--- a/lib/Makefile
+++ b/lib/Makefile
@@ -24,7 +24,7 @@ $(NAME): $(LIBFT) $(OBJS) $(HEADERS)
 	$(AR) $(ARFLAGS) $(NAME) $(OBJS)
 
 $(LIBFT):
-	cp libft/libft.h libft.h
+	ln libft/libft.h libft.h
 	$(MAKE) -C libft all
 
 all: $(NAME)
